# pacto-app

./: .cursorignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONCEPTS.md  DEVELOPMENT.md  Makefile  PROFILE_CACHE_DEBUG.md  README.md  STRATEGY.md  cliff.toml  eslint.config.js  package.json  pacto-app-local-chain-issue-draft.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
.cursor/rules/: brief-inline-commentary.mdc  greenfield-no-legacy.mdc  icon-only-refresh-edit.mdc  no-cursor-coauthor.mdc  no-issue-ids-in-source.mdc  no-unrequested-deletions.mdc
.github/workflows/: ci.yaml  deploy-landing.yaml  main.yaml  release.yaml
docs/: ARCHITECTURE.md  CHAIN_TERMINOLOGY.md  README.md  pacto-app-local-chain-setup.md  pacto_ecosystem_research.md
docs/audits/: README.md
docs/brainstorms/: 2026-07-11-download-site-integration-requirements.md
docs/communities/: COMMONS.md  DESIGN.md  README.md  SQUAD_BOT_JOIN.md  SQUAD_CATALOG.md
docs/dashboard/: POLLS.md  POLLS_MLS_SYNC_PLAN.md
docs/ideation/: 2026-07-11-download-site-integration-ideation.html
docs/legacy-fixes/: CATALOG.md  LF-001-evm-address-repair.md  LF-002-wallet-bar-token-filter-migration.md  LF-003-peer-evm-send-fallback.md  README.md  TEMPLATE.md
docs/messaging/: OVERVIEW.md  README.md
docs/mls/: ARCHITECTURE.md  EVICTION_AND_LEAVE.md  INVITES_AND_MEMBERSHIP.md  README.md  TROUBLESHOOTING.md  VIRTUAL_CHANNEL_ROUTING_ADR.md
docs/modpol/: PACTO_AND_MODULAR_POLITICS.md
docs/nostr/: ARCHITECTURE.md  README.md
docs/plans/: 2026-07-11-001-feat-download-site-landing-plan.md
docs/reviews/: 2026-06-26-local-dev-auto-config-code-review.md
docs/shell/: LAYOUT.md
docs/storage-layout/: ACCOUNT_LOGOUT_AND_ISOLATION.md  MESSAGE_ENCRYPTION.md  README.md  SQLITE_AND_FILES.md
docs/testing/: BACKEND_TESTING_PLAN.md  README.md
docs/wallet/: ADVANCED_CONTRACT_SMOKE.md  CHAIN_CONFIG.md  DM_WALLET_MESSAGE_SCHEMA.md  EVM_ADDRESS_DERIVATION.md  GOVERNANCE_ANNOUNCE_SYNC_SMOKE.md  HD_DERIVATION_V1.md  LOCAL_ANVIL_DEV_SETUP.md  MANUAL_E2E_CHECKLIST.md  NAVE_PIRATA_SMOKE.md  ONCHAIN_READ_PATTERN.md  OPERATOR_SMOKE.md  PACTO-APP-LOCAL-CHAIN-SETUP.md  PACTO_GOV.md  README.md  (+11 more)
landing/: astro.config.mjs  package.json
scripts/: bump-version.sh  generate-release-manifest.mjs  generate-release-manifest.test.mjs  post-process-changelog.sh
src/: app.css  app.html  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.dev-demo.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: account_manager.rs  audio.rs  blossom.rs  chat.rs  commons.rs  crypto.rs  dashboard_poll.rs  db.rs  deep_link.rs  evm.rs  evm_accounts.rs  image_cache.rs  lib.rs  main.rs  message.rs  mls.rs  nave_pirata_deploy.rs  net.rs  profile.rs  profile_sync.rs  rumor.rs  safe_deploy.rs  squad_bot.rs  squad_catalog.rs  stored_event.rs  util.rs  virtual_channel_bucket.rs  voice.rs  wallet_chain_config.rs  wallet_ops.rs  wallet_prices.rs  whisper.rs
src-tauri/src/android/: clipboard.rs  filesystem.rs  mod.rs  permissions.rs
src-tauri/src/contracts/: mod.rs
src-tauri/src/contracts/pacto_gov/: mod.rs
src-tauri/src/evm/: advanced_contract_call.rs  contract_call_params.rs  evm_accounts.rs  evm_keys.rs  gov_read.rs  hats_read.rs  member_governance_read.rs  mod.rs  nave_pirata_deploy.rs  nave_pirata_read.rs  pacto_chain_config.rs  safe_deploy.rs  squad_admin_deploy.rs  squad_admin_write.rs  squad_allowlist.rs  squad_sponsor_common.rs  squad_sponsor_deploy.rs  squad_sponsor_deposit.rs  squad_sponsor_read.rs  treasury_proposals_read.rs  wallet_chain_config.rs  wallet_ops.rs  wallet_prices.rs  wallet_rpc_providers.rs  wallet_security.rs
src-tauri/src/evm/contracts/: mod.rs
src-tauri/src/evm/contracts/erc20/: mod.rs
src-tauri/src/evm/contracts/hats/: mod.rs
src-tauri/src/evm/contracts/pacto_gov/: mod.rs  read_bindings.rs
src-tauri/src/evm/contracts/pacto_sponsor/: mod.rs
src-tauri/src/evm/contracts/safe/: mod.rs
src-tauri/src/evm/rpc/: address.rs  call.rs  config.rs  errors.rs  mod.rs  provider.rs  signer.rs
src-tauri/src/miniapps/: commands.rs  error.rs  marketplace.rs  mod.rs  network_isolation.rs  permissions.rs  realtime.rs  scheme.rs  state.rs
(+440 files in other folders)
