[package]
name = "pacto"
version = "0.1.0"
description = "A Tauri App"
authors = ["daopunk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pacto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
nostr-sdk = { version = "0.43", features = ["nip06", "nip44", "nip59"] }
nostr-blossom = "0.43.0"
mdk-core = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-sqlite-storage = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
mdk-storage-traits = { git = "https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
bip39 = { version = "2.2.0", features = ["rand"] }
tokio = { version = "1.48.0", features = ["sync", "time"] }
futures-util = "0.3.31"
tauri = { version = "2.9.1", features = [ "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["rustls-tls", "stream", "blocking", "multipart"] }
scraper = "0.24.0"
aes = "0.8.4"
aes-gcm = "0.10.3"
hex = "0.4.3"
generic-array = "0.14.7"
digest = "0.10"
sha2 = "0.10.9"
k256 = { version = "0.13", features = ["ecdsa"] }
secp256k1 = { version = "0.29", features = ["std", "recovery"] }
sha3 = "0.10"
once_cell = "1.21.3"
lazy_static = "1.5.0"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
tauri-plugin-opener = "2.5.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-deep-link = "2.4.5"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff", "ico"] }
blurhash = "0.2.3"
base64 = "0.22.1"
cpal = "0.16.0"
hound = "3.5.1"
rubato = "0.16.2"
symphonia = { version = "0.5.5", features = ["mp3", "wav", "flac", "pcm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
rand = "0.8"
url = "2.5"
# Use alloy 1.x: 0.15.x `alloy-consensus` does not build against serde 1.0.228+.
# `reqwest` + `reqwest-rustls-tls` enable the JSON-RPC HTTP client (default-features = false drops them otherwise → "No transports enabled").
alloy = { version = "1.0.41", default-features = false, features = ["provider-http", "signer-local", "sol-types", "rpc-types", "reqwest", "reqwest-rustls-tls"] }

# Android-only dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
openssl = { version = "0.10", features = ["vendored"] }

# Whisper (with cross-platform acceleration features - excluded on Android)
[target.'cfg(all(not(target_os = "android"), target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"], optional = true }

[target.'cfg(all(not(target_os = "android"), windows))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

[target.'cfg(all(not(target_os = "android"), target_os = "linux"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

# For other platforms (not Android, macOS, Windows, or Linux)
[target.'cfg(all(not(target_os = "android"), not(target_os = "macos"), not(windows), not(target_os = "linux")))'.dependencies]
whisper-rs = { version = "0.13.2", optional = true }

# Desktop-only dependencies (deep link single-instance support)
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.1"

# MCP bridge for AI-assisted debugging (only included in debug builds via cfg)
tauri-plugin-mcp-bridge = "0.7"
